syntax = "proto3";

package pb;

import "user.proto";

option go_package = "github.com/krobus00/golang-grpc/pb";

message LoginUserRequest {
    string username = 1;
    string password = 2;
}

message LoginUserResponse{
    User user = 1;
    string access_token = 2;
}