syntax = "proto3";

package pb;

import "rpc_create_user.proto";
import "rpc_login_user.proto";

option go_package = "github.com/krobus00/golang-grpc/pb";

service Auth{
    rpc CreateUser(CreateUserRequest) returns (CreateUserResponse){}
    rpc LoginUser(LoginUserRequest) returns (LoginUserResponse){}
}